--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,11 @@
 \newcommand{\chalg}{\text{\normalfont chyba algoritmu}}
 \newcommand{\penal}{\text{\normalfont pokuta}}
 
+\newcommand{\larr}{\leftarrow}
+\newcommand{\rarr}{\rightarrow}
+\newcommand{\uarr}{\uparrow}
+\newcommand{\darr}{\downarrow}
+
 
 \newcommand{\TODO}[1]{\noindent {\color{red} TODO #1} \\}
 
